Make `MuleContextWithRegistry` privileged API