@@ -22,6 +22,7 @@
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.context=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.registry=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.serialization=ALL-UNNAMED
+            --add-opens=org.mule.runtime.core/org.mule.runtime.core.privileged.context.registry=ALL-UNNAMED
             --add-opens=org.mule.runtime.tooling.support/org.mule.runtime.module.tooling.internal=ALL-UNNAMED
             ${surefire.args.base}
         </surefire.args>
